性能监控相关优化

--- a/src/WebApi/appsettings.json
+++ b/src/WebApi/appsettings.json
@@ -17,5 +17,16 @@
     "Audience": "HangfireJobsSys-Clients",
     "Key": "your-secret-key-here-change-in-production",
     "ExpirationMinutes": 60
+  },
+  "PerformanceMonitoring": {
+    "Enabled": true,
+    "RetentionDays": 30,
+    "HistoryMigrationBatchSize": 1000,
+    "CleanupIntervalHours": 24,
+    "AlertThresholds": {
+      "MaxExecutionTimeMs": 30000,
+      "FailureRatePercentage": 5,
+      "TimeoutPercentage": 3
+    }
   }
 }
